# MCPHub-Bridge

./: .gitignore  ENCODING_FIX_VERIFIED.md  README.md  pyproject.toml
examples/: claude_desktop_config.json  claude_desktop_config_dev.json  config-admin.yaml  config-user.yaml
mcphub_bridge/: __init__.py  __main__.py  auth.py  bridge.py  config.py
